# hackatime-cli

./: .env  .gitignore  Cargo.toml  README.md  oauth.html
src/: api.rs  auth_store.rs  config.rs  main.rs  models.rs  oauth.rs  output.rs  settings.rs  storage.rs
website/: docs.html  index.html  styles.css
