[package]
name = "hackatime"
version = "0.1.1"
edition = "2024"
description = "Terminal CLI for viewing Hackatime stats with OAuth login"
readme = "README.md"
license = "MIT"
keywords = ["hackatime", "cli", "terminal", "oauth", "stats"]
categories = ["command-line-utilities"]

[[bin]]
name = "hackatime"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
open = "5.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["full"] }
url = "2.5"
dirs = "6.0"
